# meal_request

./: CLAUDE.md  README.md
src/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  aa.json  alembic.ini  app.py  celery_app.py  create_admin.py  main.py  old_db_to_new_REVISED.py  pyproject.toml  replicate.py  reset_admin.py  settings.py
src/backend/alembic/: env.py
src/backend/api/: DATA_ACCESS_PATTERN.md  ENDPOINT_EXAMPLES.md  __init__.py  analytics.py  deps.py  exception_handlers.py
src/backend/api/repositories/: __init__.py  base.py  department_assignment_repository.py  department_repository.py  domain_user_repository.py  email_repository.py  email_role_repository.py  employee_repository.py  hris_repository.py  log_authentication_repository.py  log_configuration_repository.py  log_meal_request_line_repository.py  log_role_repository.py  (+17 more)
src/backend/core/: __init__.py  config.py  correlation.py  dependencies.py  exceptions.py  pagination.py  redis.py  repository_utils.py  security.py  session.py.old  sessions.py  user_source_enum.py
src/backend/db/: async_migration_plan.md  database.py  hris_database.py  maria_database.py  model.py  models.py  schemas.py  setup_database.py
src/backend/redis/: redis.conf
src/backend/scripts/: concurrent_trigger.sh  debug_trigger_task.sh  populate_debug_doc.sh
src/backend/tasks/: __init__.py  attendance.py  celery_bridge.py  domain_users.py  email.py  hris.py  scheduler.py
src/backend/templates/: confirmation.html  request.html
src/backend/tests/: test_authorization.py  test_background_tasks.py  test_bilingual_support.py  test_hris_on_shift_logic.py  test_locale_detection.py  test_navigation.py  test_rbac.py  test_role_permission_repository.py  test_scheduler_logging_integration.py  test_security.py  test_settings.py  test_single_session_per_request.py  test_structured_logger.py  test_tokens.py  test_user_sync_conflict.py
src/backend/utils/: active_directory.py  ad_client.py  app_schemas.py  audit_cleanup.py  circuit_breaker.py  correlation_middleware.py  cors_allowlist.py  custom_exceptions.py  datetime_utils.py  icon_validation.py  ldap.py  logging_config.py  login.py  mail_sender.py  observability.py  replicate_hris.py  secrets.py  security.py  startup.py  structured_logger.py  sync_attendance.py
(+561 files in other folders)
